--- a/index.html
+++ b/index.html
@@ -7,6 +7,78 @@
   </head>
 
   <body>
+
+    <nav id="navbar" class="nav">
+      <ul class="nav-list">
+        <li>
+          <a href="#welcome-section">About</a>
+        </li>
+        <li>
+          <a href="#projects">Work</a>
+        </li>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+    <section id="welcome-section">
+      <h1>Hey I am Mimic</h1>
+      <p>a web developer</p>
+    </section>
+
+    <section id="projects">
+      <h2>These are some of my projects</h2>
+
+      <div class="project-tile">
+      <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="Tribute Page" />
+        <p> Tribute Page</p> 
+      </a>
+      <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" target="_blank">
+        <img  src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="Random Quote Machine"/>
+        <p> Random Quote Machine </p>
+      </a>
+      <a href="https://codepen.io/freeCodeCamp/full/wgGVVX" target="_blank">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="JavaScript Calculator"/>
+        <p> JavaScript Calculator </p>
+      </a>
+      <a href="https://codepen.io/freeCodeCamp/full/mVEJag" target="_blank">
+          <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" alt="Map Data Across the Globe"/>
+          <p> Map Data Across the Globe</p>           
+        </a>
+        <a href="https://codepen.io/freeCodeCamp/full/wGqEga" target="_blank">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" alt="Wikipedia Viewer"/>
+            <p> Wikipedia Viewer </p>
+        </a>
+        <a href="https://codepen.io/freeCodeCamp/full/KzXQgy" target="_blank">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" alt="Tic Tac Toe Game"/>
+            <p> Tic Tac Toe Game</p>
+        </a>
+      </div>
+
+      <a
+        href="https://codepen.io/FreeCodeCamp/"
+        class="btn btn-show-all"
+        target="_blank">Show all></a>
+    </section>
+
+    <section id="contact" class="contact-section">
+      <div class="contact-section-header">
+        <h2>Let's work together...</h2>
+        <p>How do you take your coffee?</p>
+      </div>
+      <div>
+        <a id="profile-link" href="https://facebook.com/freecodecamp" target="_blank">
+          <i class="fab fa-facebook-square"></i> Facebook</a>
+        <a id="profile-link" href="https://github.com/freecodecamp" target="_blank">
+          <i class="fab fa-github"></i> GitHub</a>
+        <a id="profile-link"href="https://twitter.com/freecodecamp" target="_blank">
+          <i class="fab fa-twitter"></i> Twitter</a>
+      </div>
+    </section>
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
